# farcaster-indexer

./: .gitignore  Cargo.toml  README.md  rsync.sh  script.txt
entity/: Cargo.toml
entity/src/: cast.rs  casts.rs  fids.rs  hubs.rs  lib.rs  links.rs  mod.rs  prelude.rs  reactions.rs  signers.rs  storage.rs  user_data.rs  verifications.rs
farcaster-client/: Cargo.toml  build.rs
farcaster-client/res/: abi.json
farcaster-client/src/: client.rs  grpc.rs  lib.rs  to_entity.rs  utils.rs
indexer/: .env  .env.example  Cargo.toml  build.rs
indexer/src/: db.rs  main.rs  rabbitmq.rs
indexer/src/rpc/: client.rs  farcaster_grpc.rs  mod.rs
indexer/src/subcommands/: backfill.rs  clear_mq.rs  index.rs  mod.rs  redis.rs  run.rs
migration/: Cargo.toml  migrate.sh
migration/src/: m20220101_000001_create_table.rs
service/: Cargo.toml
service/src/: lib.rs
service/src/mutation/: casts.rs  fid.rs  links.rs  mod.rs  reactions.rs  signer.rs  storage.rs  user_data.rs  verification.rs
