[package]
name = "farcaster-client"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13"
prost-types = "0.13"
tonic = "0.12.0"
tokio = { workspace = true }
anyhow = { workspace = true }
lapin = { workspace = true }
entity = { path = "../entity" }

[build-dependencies]
tonic-build = "0.12"
