[package]
name = "farcaster-client"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13"
prost-types = "0.13"
tonic = "0.12.0"
tokio = { workspace = true }
anyhow = { workspace = true }
lapin = { workspace = true }
entity = { path = "../entity" }
chrono = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

ethabi = "18.0.0"
ethabi-contract = "16.0.0"
ethabi-derive = "16.0.0"

[build-dependencies]
tonic-build = "0.12"
