[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
lapin = "2.3.4"
prost = "0.13"
prost-types = "0.13"
tonic = "0.12.0"
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
rabbitmq-stream-client = "0.4"
service = { path = "../service" }
farcaster-client = { path = "../farcaster-client" }

[build-dependencies]
tonic-build = "0.12"
