[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13"
prost-types = "0.13"
tonic = "0.12.0"
lapin = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
tokio-executor-trait = "2.1"
tokio-reactor-trait = "1.1"

redis = { version = "0.25.4", features = ["tokio-comp"] }

service = { path = "../service" }
farcaster-client = { path = "../farcaster-client" }
entity = { path = "../entity" }

bytes = "1.6.0"

serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
