[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "0.12", features = ["runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "with-time"] }
anyhow = { workspace = true }
chrono = { workspace = true }
entity = { path = "../entity" }
farcaster-client = { path = "../farcaster-client" }
